--- a/Jproject/myapp/templates/login.html
+++ b/Jproject/myapp/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form method="post">
-
+{% csrf_token %}
       <div>
           <label for="username">Username: </label>
           <input id="username" type="text" name="username" value={{ username }}>
@@ -19,7 +19,6 @@
 
       <input type="submit" value="Log In">
 
-    </form>
-
+</form>
 </body>
 </html>
