--- a/myapp/templates/feed.html
+++ b/myapp/templates/feed.html
@@ -1,28 +1,90 @@
-{% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>DashBoard</title>
+
+    <style>
+        body{
+            text-align: center;
+             background: papayawhip;
+             font-size: medium;
+        }
+       input [type= "submit"] {
+            color: white;
+            border: 0px;
+            font-size: smaller;
+            border-radius: 15%;
+            font-size: 18px;
+            padding: 5px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-right: 16px;
+        }
+       h1 {
+            color: firebrick;
+            font-size: 55px;
+        }
+        h3 {
+            color: saddlebrown;
+            font-size: 35px;
+    }
+        p {
+            font-size: 22px;
+             color: saddlebrown;
+        }
+        input[type="text"] {
+            font-size: smaller;
+            width: 150px;
+            height: 15px;
+            background: khaki;
+            border: 0px;
+            padding: 10px 10px 10px 10px;
+            margin-bottom: 10px;
+    }
+        img{
+            height: 300px;
+        }
+        span{
+            text-align: center;
+        }
+        div{
+            font-size: 15px;
+        }
+        p{
+            font-size: 15px;
+        }
+    </style>
+
 </head>
 <body>
-<form method="post" action="/post/">
-        {% csrf_token %}
-        <input type="submit" class="btn-default btn" value="Create Post">
-    </form>
+
+<button onclick= "location.href = 'post/'" type="button">Create Post</button>
+ <form action="/searchfilter/" method="GET">
+    {% csrf_token %}
+    <input type="text" name="search_query" class='' placeholder="Search by name">
+    <input type="submit" class="btn btn-default" value="Search">
+ </form>
+
+<form method="POST" ,action="/logout/">
+            {% csrf_token %}
+    <input type="submit" class="btn btn-default" value="Logout">
+</form>
+<h1>Feeds</h1>
+{% for post in posts %}
 
 
-    {% for post in posts %}
-
-
-        <h3> Posted by: { { prateek } } </h3>
+        <h3> Posted by: {{ post.user.username }}</h3>
+        <br>
         <p>[{{ post.created_on }}]</p>
+
+
+
         <img style="display:inline-block; width:350px; height:300px;"
              src="{{ post.image_url }}" /><br>
         <span  style="display:inline-block;">{{ post.caption }}</span><br/><br/>
         <div style="display:inline-block">
-            {{ post.like_count }} likes this
+            {{ post.like_count }} like this
         </div>
         <div style="display:inline-block">
             <form method="POST" action="/like/">
@@ -52,6 +114,6 @@
             {% endfor %}
         </div>
 
-    {% endfor %}
+        {% endfor %}
 </body>
 </html>
