--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,48 +1,127 @@
+{% load static %}
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Instagram Clone</title>
     <style>
-        header {
+       body{
+           background: url("https://s-media-cache-ak0.pinimg.com/originals/14/22/07/142207cfb41addee27b138fa7b7638d0.jpg") no-repeat center center fixed;
+           background-size: cover;
+           background-repeat: no-repeat;
+           -webkit-background-size: cover;
             text-align: center;
+       }
+         h1 {
+             color: black;
+             font-size: 55px;
+         }
+        h3 {
+            color: black;
+            font-size: 35px;
+        }
+        div{
+            font-family: Verdana;
+            color: darkslategrey;
+            margin: 10px;
+        }
+        .main
+        {
+            text-align:center;
+            font-size: 22px;
+        }
+        form{
+            font-size: 16px;
+        }
+        label{
+display:inline-block;
+width:200px;
+text-align:right;
+            margin-left: -120px;
+}
+        button{
+             background: black;
+            color: white;
+            border: 0px;
+            font-size: smaller;
+            border-radius: 15%;
+            font-size: 18px;
+            padding: 5px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-right: 16px;
+        }
+         input[type="submit"] {
+            background: black;
+            color: white;
+            border: 0px;
+            font-size: smaller;
+            border-radius: 15%;
+            font-size: 18px;
+            padding: 5px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-right: 16px;
+        }
+         table{
+            border: solid;
+            border-color: darkslategrey;
+            padding: 10px 10px 10px 10px;
         }
     </style>
 </head>
 <body>
-<div class="main">
-<h1 align="center"> Instagram Clone</h1>
-<h3 align="center"> Sign Up</h3>
-    <h4 >{{ today }} </h4>
-</div>
-<form method="post">
-    {% csrf_token %}
-       <div>
-           <label for="username" >Username: </label>
-           <input id="username" type="text" name="username" value="">
-       </div>
+	<div class="main">
+            <h1> Instagram Clone</h1>
+        <h2><u>Sign Up</u></h2>
+    </div>
 
-       <div>
-           <label for="name">Name: </label>
-           <input id="name" type="text" name="name" value="">
-       </div>
+    <div>
 
-       <div>
-           <label for="email">Email: </label>
-           <input id="email" type="text" name="email" value="">
-       </div>
+        <form action = '' method="post">{% csrf_token %}
+            <table align="center">
+            <tr>
 
-       <div>
-           <label for="password">Password: </label>
-           <input id="password" type="password" name="password" value="">
-       </div>
-           <input type="submit" value="Sign Up">
-    </form>
+            <div class ="username">
+                <td><label for="username">Username: </label></td>
+                <td> <input id="username" type="text" name="username" value={{ username }}></td>
+            </div>
+            </tr>
 
- </div><br><br>
+            <tr>
+            <div class="name">
+                <td><label for="name">Name: </label></td>
+                <td><input id="name" type="text" name="name" value={{ name }}></td>
+            </div>
+            </tr>
 
-    <div><h3>Already a user?</h3><a href="login/">Login</a> </div>
+           <tr>
+            <div class="email">
+                <td><label for="email">Email: </label></td>
+                <td> <input id="email" type="text" name="email" value={{ email }}></td>
+            </div>
+            </tr>
 
+            <tr>
+            <div class="password">
+                <td><label for="password">Password: </label></td>
+                <td><input id="password" type="password" name="password" value={{ password }}></td>
+            </div>
+            </tr>
+            </table>
+            <br/>
 
+                <input type="submit" value="Sign Up"/>
+                <input type="submit" value="reset"/>
+               <br>
+        </form>
+
+    </div><br><br>
+
+    <div><h3>Already a user?</h3><button onclick= "location.href = 'login/'" type="button">Login</button>
+
+        </div>
 </body>
 </html>
